[update] 打刻履歴画面にリサイクルビューを追加しました。

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,7 +12,7 @@
         tools:layout="@layout/commuting_time_registration_fragment" />
     <fragment
         android:id="@+id/commutingTimeHistoryFragment"
-        android:name="com.hyungilee.commutingmanagement.ui.commutingtimehistory.CommutingTimeHistoryFragment"
+        android:name="com.hyungilee.commutingmanagement.ui.commutingdatahistory.CommutingDataHistoryFragment"
         android:label="commuting_time_history_fragment"
         tools:layout="@layout/commuting_time_history_fragment" />
 </navigation>
