--- a/app/src/main/res/layout/commuting_time_history_fragment.xml
+++ b/app/src/main/res/layout/commuting_time_history_fragment.xml
@@ -3,11 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.commutingtimehistory.CommutingTimeHistoryFragment">
+    tools:context=".ui.commutingdatahistory.CommutingDataHistoryFragment">
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/commuting_time_history_rv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Hello" />
+        tools:listitem="@layout/commuting_time_history_list_item"/>
 
 </FrameLayout>
