[update]打刻時間をチェックする打刻ページのレイアウトを作成する

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,8 @@
         android:id="@+id/bottom_nav"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorAccent"
+        android:background="@color/kBlue"
+        app:itemTextColor="@color/kLightYellow"
         app:menu="@menu/bottom_nav" />
 
 </LinearLayout>
