[add/update] 打刻履歴画面のレイアウトを作成しました。

--- a/app/src/main/res/layout/commuting_time_history_fragment.xml
+++ b/app/src/main/res/layout/commuting_time_history_fragment.xml
@@ -3,12 +3,71 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.commutingdatahistory.CommutingDataHistoryFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/commuting_time_history_rv"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:listitem="@layout/commuting_time_history_list_item"/>
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:background="@color/kDarkYellow"
+        android:weightSum="8">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:padding="10dp"
+                android:textSize="30sp"
+                android:textStyle="bold"
+                android:textColor="@color/colorBlack"
+                android:text="5月"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="right|bottom
+"
+                android:layout_marginRight="10dp"
+                android:layout_weight="2">
+
+                <Button
+                    android:layout_width="wrap_content"
+                    style="@style/Widget.AppCompat.Button.Colored"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:text="CSVファイル抽出"/>
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@style/Widget.AppCompat.Button.Colored"
+                    android:textStyle="bold"
+                    android:text="メール送信"/>
+
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+            <ph.ingenuity.tableview.TableView
+                android:id="@+id/random_data_tableview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:table_row_header_width="@dimen/row_header_width"
+                app:table_selected_color="@color/kRed"
+                app:table_show_horizontal_separator="true"
+                app:table_show_vertical_separator="true"/>
+        </LinearLayout>
+
+    </LinearLayout>
 
 </FrameLayout>
