--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,5 +15,9 @@
     <style name="AppTheme.RoundedCornerMaterialButtonEndTime" parent="Widget.AppCompat.Button.Colored">
         <item name="android:background">@drawable/end_time_button_rounded_shape</item>
     </style>
+    <style name="AppTheme.Button" parent="Widget.AppCompat.Button.Colored">
+        <item name="colorButtonNormal">@color/kRed</item>
+        <item name="android:textColor">@color/colorWhite</item>
+    </style>
 
 </resources>
