--- a/app/src/main/res/layout/commuting_time_history_fragment.xml
+++ b/app/src/main/res/layout/commuting_time_history_fragment.xml
@@ -26,7 +26,7 @@
                 android:textSize="30sp"
                 android:textStyle="bold"
                 android:textColor="@color/colorBlack"
-                android:text="5月"/>
+                android:text="5月の勤怠表"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
