--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,6 @@
     <color name="kGreen">#FF309397</color>
     <color name="kDarkBlue">#FF0D253F</color>
 
+    <color name="grey_500">#9E9E9E</color>
+
 </resources>
