[add/update] ログイン画面のレイアウト修正と給料確認、設定画面のレイアウトファイルを作成しました。

--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -9,9 +9,11 @@
         android:icon="@drawable/ic_history_black"
         android:title="打刻履歴"/>
     <item
+        android:id="@+id/salaryVerficationFragment"
         android:icon="@drawable/ic_attach_money_black"
         android:title="給料確認"/>
     <item
+        android:id="@+id/settingFragment"
         android:icon="@drawable/ic_settings_black"
         android:title="設定"/>
 </menu>
