--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    android:weightSum="6"
+    android:background="@color/kLightYellow2"
+    android:weightSum="8"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <ProgressBar
@@ -20,61 +21,69 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_weight="3">
+            android:layout_weight="1">
         <ImageView
             android:id="@+id/icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:layout_marginBottom="50dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginBottom="30dp"
             android:src="@drawable/company_logo" />
-
         <TextView
             android:id="@+id/titleText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginBottom="50dp"
             android:text="ログイン画面"
+            android:textSize="30sp"
             android:textColor="@color/colorBlack"
             android:textStyle="bold"
             android:theme="@style/ThemeOverlay.MyTitleText" />
 
-        <TextView
-            android:id="@+id/status"
-            style="@style/ThemeOverlay.MyTextDetail"
-            android:text="サインアウト" />
-
-        <TextView
-            android:id="@+id/detail"
-            style="@style/ThemeOverlay.MyTextDetail"
-            tools:text="Firebase User ID: 123456789abc" />
         </LinearLayout>
 
         <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="visible">
+            <TextView
+                android:id="@+id/status"
+                style="@style/ThemeOverlay.MyTextDetail"
+                android:text="サインアウト"/>
+
+            <TextView
+                android:id="@+id/detail"
+                style="@style/ThemeOverlay.MyTextDetail"
+                tools:text="Firebase User ID: 123456789abc" />
+        </LinearLayout>
+
+    <LinearLayout
             android:id="@+id/emailPasswordFields"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:gravity="center"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
-            android:layout_weight="2">
+            android:layout_weight="4">
 
             <EditText
                 android:id="@+id/fieldEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:hint="メールアドレス"
+                android:layout_marginBottom="30dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:inputType="textEmailAddress" />
 
             <EditText
                 android:id="@+id/fieldPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:hint="パスワード"
                 android:inputType="textPassword" />
 
@@ -84,7 +93,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:layout_weight="1">
+            android:layout_weight="2">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -97,7 +106,8 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:paddingLeft="16dp"
-                android:paddingRight="16dp">
+                android:paddingRight="16dp"
+                android:visibility="gone">
 
                 <Button
                     android:id="@+id/emailSignInButton"
@@ -125,41 +135,63 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
-                android:visibility="gone">
+                android:visibility="visible">
 
-                <Button
-                    android:id="@+id/signOutButton"
-                    android:layout_marginStart="@dimen/button_horizontal_margin"
-                    android:layout_marginEnd="@dimen/button_horizontal_margin"
-                    android:layout_width="0dp"
+                <TextView
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="サインアウト"
-                    android:theme="@style/ThemeOverlay.MyDarkButton" />
+                    android:textSize="11sp"
+                    android:textColor="@color/colorBlack"
+                    android:text="初期ログインする場合は認証リンクをメールに送って認証してください。"/>
 
-                <Button
-                    android:id="@+id/verifyEmailButton"
-                    android:layout_marginStart="@dimen/button_horizontal_margin"
-                    android:layout_marginEnd="@dimen/button_horizontal_margin"
-                    android:layout_width="0dp"
+                <TextView
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="確認メール送信"
-                    android:theme="@style/ThemeOverlay.MyDarkButton" />
+                    android:textSize="11sp"
+                    android:textColor="@color/colorBlack"
+                    android:layout_marginBottom="15dp"
+                    android:text="認証した後で一番右側の認証完了ボタンを押してください。"/>
 
-                <Button
-                    android:id="@+id/reloadButton"
-                    style="@style/Widget.AppCompat.Button.Colored"
-                    android:layout_marginStart="@dimen/button_horizontal_margin"
-                    android:layout_marginEnd="@dimen/button_horizontal_margin"
-                    android:layout_width="0dp"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="メール確認完了"
-                    android:theme="@style/ThemeOverlay.MyDarkButton" />
+                    android:orientation="horizontal">
+
+                    <Button
+                        android:id="@+id/signOutButton"
+                        android:layout_marginStart="@dimen/button_horizontal_margin"
+                        android:layout_marginEnd="@dimen/button_horizontal_margin"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:text="サインアウト"
+                        android:theme="@style/ThemeOverlay.MyDarkButton" />
+
+                    <Button
+                        android:id="@+id/verifyEmailButton"
+                        android:layout_marginStart="@dimen/button_horizontal_margin"
+                        android:layout_marginEnd="@dimen/button_horizontal_margin"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:textSize="12sp"
+                        android:text="認証リンク送信"
+                        android:theme="@style/ThemeOverlay.MyDarkButton" />
+
+                    <Button
+                        android:id="@+id/reloadButton"
+                        style="@style/Widget.AppCompat.Button.Colored"
+                        android:layout_marginStart="@dimen/button_horizontal_margin"
+                        android:layout_marginEnd="@dimen/button_horizontal_margin"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="認証完了"
+                        android:theme="@style/ThemeOverlay.MyDarkButton" />
+                </LinearLayout>
             </LinearLayout>
         </RelativeLayout>
 
