--- a/app/src/main/res/layout/commuting_time_registration_fragment.xml
+++ b/app/src/main/res/layout/commuting_time_registration_fragment.xml
@@ -338,4 +338,30 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/commuting_check_inactive_screen"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:background="@color/inactive_screen_background"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textSize="26sp"
+            android:textColor="@color/colorWhite"
+            android:text="アプリ非活性化"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textSize="15sp"
+            android:textColor="@color/colorWhite"
+            android:text="設定画面でログインした後に使用してください。"/>
+
+    </LinearLayout>
+
 </FrameLayout>
