--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -49,8 +49,7 @@
             android:visibility="visible">
             <TextView
                 android:id="@+id/status"
-                style="@style/ThemeOverlay.MyTextDetail"
-                android:text="サインアウト"/>
+                style="@style/ThemeOverlay.MyTextDetail"/>
 
             <TextView
                 android:id="@+id/detail"
@@ -104,41 +103,58 @@
                 android:id="@+id/emailPasswordButtons"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                android:visibility="gone">
+                android:orientation="vertical"
+                android:visibility="visible">
 
-                <Button
-                    android:id="@+id/emailSignInButton"
-                    android:layout_marginStart="@dimen/button_horizontal_margin"
-                    android:layout_marginEnd="@dimen/button_horizontal_margin"
-                    android:layout_width="0dp"
+                <TextView
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="サインイン"
-                    android:theme="@style/ThemeOverlay.MyDarkButton" />
+                    android:textSize="11sp"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
+                    android:layout_marginBottom="15dp"
+                    android:textColor="@color/colorBlack"
+                    android:text="※ 初期ログインする場合はアカウントを登録してください。"
+                    android:textStyle="bold"/>
 
-                <Button
-                    android:id="@+id/emailCreateAccountButton"
-                    android:layout_marginStart="@dimen/button_horizontal_margin"
-                    android:layout_marginEnd="@dimen/button_horizontal_margin"
-                    android:layout_width="0dp"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="アカウント生成"
-                    android:theme="@style/ThemeOverlay.MyDarkButton" />
+                    android:orientation="horizontal"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp">
+
+                    <Button
+                        android:id="@+id/emailSignInButton"
+                        android:layout_marginStart="@dimen/button_horizontal_margin"
+                        android:layout_marginEnd="@dimen/button_horizontal_margin"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="サインイン"
+                        android:theme="@style/ThemeOverlay.MyDarkButton" />
+
+                    <Button
+                        android:id="@+id/emailCreateAccountButton"
+                        android:layout_marginStart="@dimen/button_horizontal_margin"
+                        android:layout_marginEnd="@dimen/button_horizontal_margin"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="アカウント登録"
+                        android:theme="@style/ThemeOverlay.MyDarkButton" />
+                </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/signedInButtons"
+                android:id="@+id/emailVerification_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:orientation="vertical"
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
-                android:visibility="visible">
+                android:visibility="gone">
 
                 <TextView
                     android:layout_width="match_parent"
@@ -160,15 +176,15 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
-                    <Button
-                        android:id="@+id/signOutButton"
-                        android:layout_marginStart="@dimen/button_horizontal_margin"
-                        android:layout_marginEnd="@dimen/button_horizontal_margin"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:text="サインアウト"
-                        android:theme="@style/ThemeOverlay.MyDarkButton" />
+<!--                    <Button-->
+<!--                        android:id="@+id/signOutButton"-->
+<!--                        android:layout_marginStart="@dimen/button_horizontal_margin"-->
+<!--                        android:layout_marginEnd="@dimen/button_horizontal_margin"-->
+<!--                        android:layout_width="0dp"-->
+<!--                        android:layout_height="match_parent"-->
+<!--                        android:layout_weight="1"-->
+<!--                        android:text="サインアウト"-->
+<!--                        android:theme="@style/ThemeOverlay.MyDarkButton" />-->
 
                     <Button
                         android:id="@+id/verifyEmailButton"
