--- a/app/src/main/res/layout/setting_fragment.xml
+++ b/app/src/main/res/layout/setting_fragment.xml
@@ -33,6 +33,17 @@
             android:background="@drawable/cell_border"
             android:text="ログイン"/>
 
+        <Button
+            android:id="@+id/logout_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/cell_border"
+            android:text="ログアウト"
+            android:visibility="gone"/>
+
     </LinearLayout>
 
 </FrameLayout>
