--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <data>
+        <import type="android.view.View"/>
+    </data>
+
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:background="@color/kLightYellow2"
-    android:weightSum="8"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:weightSum="8">
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -213,3 +218,4 @@
 
         </LinearLayout>
     </LinearLayout>
+</layout>
